--- a/style.css
+++ b/style.css
@@ -1,38 +1,17 @@
-*{
-    border: 1px dashed red;
-    min-height: 10px
-}
-
-html{
-    background-color: black;
-    width: 500px;
-    height: auto;
-    margin: auto;
-}
-body{
-    background-color: beige;
-}
 .post-header{
-    width: auto;
-    height: 75px;
-    padding-top: 5px;
+    justify-content: space-between;
+    align-items: center;
+    display: flex;
     
-}
-.menu{
-   float: right;
-   width: 40px;
-   height: 40px;
-   margin-top: -50px;
-   
-
+    padding-inline: 40px;
 
 }
-.profile{
-    float: left;
-   width: 60px;
-   height: 60px;
-   border-radius: 50%;
+.right-header{
+    padding-right: 90px;
 }
-#photo{
-    width: 100%;
+
+
+.post-img{
+    width:200px;
+    
 }
